--- a/front/homework_submit.html
+++ b/front/homework_submit.html
@@ -76,12 +76,12 @@
                         <input type="file" class="form-control-file" name="shw_file">
                     </div>
                 </div>
-                <div class="form-group row">
+                <!-- <div class="form-group row">
                     <label for="" class="col-sm-2 col-form-label">補充說明</label>
                     <div class="col-sm-10">
                         <textarea class="form-control" name="shw_description" rows="3" placeholder="請輸入補充說明"></textarea>
                     </div>
-                </div>
+                </div> -->
                 <div class="div_foot">
                     <button type="button" class="btn btn-primary" id="btn_submit">確認上傳</button>
                 </div>
@@ -104,6 +104,8 @@
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/params.js"></script>
+    <script src="js/dateFormatter.js"></script>
+
 
     <script>
     // 取得get
@@ -132,7 +134,7 @@
             console.log(JData);
             $('#td_name').text(JData.hw_name);
             $('#td_info').text(JData.hw_info);
-            $('#td_deadline').text(JData.deadline);
+            $('#td_deadline').text(dateFormatter(JData.deadlineString));
             $('#td_late').text(JData.late);
         },
 
