--- a/front/homework_edit.html
+++ b/front/homework_edit.html
@@ -106,6 +106,7 @@
           <!-- jQuery -->
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
           <script src="js/params.js"></script>
+          <script src="js/server.js"></script>
 
     <script type="text/javascript">
 
@@ -114,7 +115,7 @@
     $('#hwId').val(urlParams.hwId[0]);
 
     $.ajax({
-      url: 'http://127.0.0.1:8080/SE_final/api/unitHwContent',
+      url: SERVER_API + '/unitHwContent',
       data: {
         'hwId': hwId
       },
@@ -148,7 +149,7 @@
         $('#deadline').val($('#form-deadline').val());
         console.log($('#form-deadline').val());
         $.ajax({
-          url: 'http://127.0.0.1:8080/SE_final/api/updateHw',
+          url:SERVER_API +  '/updateHw',
           type: 'POST',
           cache: false,
           data: new FormData($('#form')[0]),
