--- a/front/homework_scoring.html
+++ b/front/homework_scoring.html
@@ -50,7 +50,7 @@
             <tbody>
                 <tr>
                     <th scope="row">作業檔案</th>
-                    <td><a href="http://127.0.0.1:8080/SE_final/api/download/1" id="a_file">檔案下載</a></td>
+                    <td><a id="a_file">檔案下載</a></td>
                 </tr>
                 <tr>
                     <th scope="row">分數</th>
@@ -82,6 +82,7 @@
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/params.js"></script>
+    <script src="js/server.js"></script>
 
     <script>
     console.log(urlParams.hw_id[0]);
@@ -92,7 +93,7 @@
     $('#member_id').val(user_id);
 
     $.ajax({
-        url: "http://127.0.0.1:8080/SE_final/api/unitHwContent",
+        url: SERVER_API + "/unitHwContent",
         data: {
             'hwId': hw_id
         },
@@ -115,7 +116,7 @@
 
     // 顯示
     $.ajax({
-        url: "http://127.0.0.1:8080/SE_final/api/hwOneDetail",
+        url: SERVER_API + "/hwOneDetail",
         data: {
             'hw_id': hw_id,
             'user_id': user_id
@@ -126,7 +127,7 @@
         success: function(JData){
             console.log('成功');
             console.log(JData);
-            $('#a_file').attr("href","http://127.0.0.1:8080/SE_final/api/download/" + JData.file_id);
+            $('#a_file').attr("href", SERVER_API + "/download/" + JData.file_id);
             $('#inp_fraction').val(JData.shw_fraction);
             $('#inp_comment').val(JData.shw_comment);
             $('#hwName').append(" "+JData.studentName+" ");
@@ -143,7 +144,7 @@
     $("#updateBtn").click(function(){
       console.log('updateBtn pressed');
         $.ajax({
-            url: 'http://127.0.0.1:8080/SE_final/api/updateScore',
+            url: SERVER_API + '/updateScore',
             type: 'POST',
             cache: false,
             data: new FormData($('#uploadForm')[0]),
