--- a/front/homework_report.html
+++ b/front/homework_report.html
@@ -103,6 +103,7 @@
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/params.js"></script>
+    <script src="js/server.js"></script>
 
         <!-- Highcharts -->
         <script src="http://code.highcharts.com/highcharts.js"></script>
