--- a/front/index.html
+++ b/front/index.html
@@ -72,11 +72,12 @@
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/server.js"></script>
 
     <script>
       $("#btn_submit").click(function(){
           $.ajax({
-              url: "http://127.0.0.1:8080/SE_final/api/login",
+              url: SERVER_API + "/login",
               data: {
                 'account': $("#acc").val(),
                 'password': $("#pwd").val()
