--- a/front/homework_submit.html
+++ b/front/homework_submit.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">PASS</a>
+        <a class="navbar-brand" href="index.html">PASS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -161,6 +161,7 @@
 
             success: function(e){
                 console.log('成功');
+                console.log(e);
                 location.href= ("SubmitHomework.html");
             },
 
