Header Logout Function Added

--- a/front/account_new.html
+++ b/front/account_new.html
@@ -44,7 +44,7 @@
           </li>
         </ul>
         <span class="navbar-text">教師</span>
-        <button type="button" class="btn btn-light">登出</button>
+        <button type="button" class="btn btn-light" onclick="logout()">登出</button>
       </div>
     </nav>
     <div class="div_headImg">
