--- a/front/homework_audit.html
+++ b/front/homework_audit.html
@@ -30,7 +30,7 @@
             </li>
           </ul>
           <span class="navbar-text">教師</span>
-          <button type="button" class="btn btn-light">登出</button>
+          <button type="button" onclick="logout()" class="btn btn-light">登出</button>
         </div>
       </nav>
       <div class="div_headImg">
