--- a/front/homework_submit.html
+++ b/front/homework_submit.html
@@ -34,8 +34,8 @@
                 <a class="nav-link" href="SubmitHomework.html">作業繳交 <span class="sr-only">(current)</span></a>
             </li>
           </ul>
-          <span class="navbar-text">教師</span>
-          <button type="button" class="btn btn-light">登出</button>
+          <span class="navbar-text">學生</span>
+          <button type="button" class="btn btn-light" onclick="logout()">登出</button>
         </div>
       </nav>
       <div class="div_headImg">
