--- a/front/homework_personal.html
+++ b/front/homework_personal.html
@@ -203,6 +203,9 @@
               case "已繳交":
                 status="text-success";
                 break;
+              case "不得補交":
+                status="text-danger";
+                break;
               case "未繳交":
                 status="text-danger";
                 break;
