--- a/front/homework_report.html
+++ b/front/homework_report.html
@@ -167,7 +167,7 @@
 
     // 顯示作業資訊
     $.ajax({
-        url: "http://127.0.0.1:8080/SE_final/api/hwAllDetail",
+        url: SERVER_API + "/hwAllDetail",
         data: {
             'hw_id': hw_id
         },
