--- a/front/homework_scoring.html
+++ b/front/homework_scoring.html
@@ -153,6 +153,7 @@
 
             success: function(e){
                 console.log('成功');
+                alert('更新成功');
                 location.href= ("homework_audit.html?hw_id="+hw_id);
             },
 
