--- a/front/homework_submit.html
+++ b/front/homework_submit.html
@@ -47,7 +47,7 @@
         <table class="table table-bordered">
             <tbody>
                 <tr>
-                    <th scope="row">作業名稱</th>
+                    <th scope="row" style="width:  120px;">作業名稱</th>
                     <td id="td_name">HomeWork 1</td>
                 </tr>
                 <tr>
@@ -162,6 +162,7 @@
             success: function(e){
                 console.log('成功');
                 console.log(e);
+                alert('作業上傳成功');
                 location.href= ("SubmitHomework.html");
             },
 
