--- a/front/index.html
+++ b/front/index.html
@@ -29,6 +29,7 @@
       text-align: center;
       margin: 10px 0 10px 0;
       font-family: serif;
+      font-size: 40px;
     }
     .div_btn{
       text-align: center;
